--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
                     </div>
                 </section>
 
+                <!-- 商品データサマリーを追加 -->
+                <section class="product-summary-section">
+                    <h2>商品データサマリー</h2>
+                    <div class="product-summary">
+                        <!-- 商品データのサマリーがここに表示されます -->
+                    </div>
+                </section>
+
                 <!-- フィルターセクション -->
                 <section class="filter-section">
                     <h2>フィルター</h2>
